--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "fs": "^0.0.1-security",
     "json2csv": "^5.0.6",
     "moment": "^2.29.1",
     "uuid": "^8.3.2"
