--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "fs": "^0.0.1-security",
+    "googleapis": "^95.0.0",
     "json2csv": "^5.0.6",
     "moment": "^2.29.1",
     "uuid": "^8.3.2"
