--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "express": "^4.17.1",
+    "express-handlebars": "^6.0.2",
     "fs": "^0.0.1-security",
     "googleapis": "^95.0.0",
     "json2csv": "^5.0.6",
